--- a/src/styles/global-styled.scss
+++ b/src/styles/global-styled.scss
@@ -31,8 +31,10 @@ h2 {
   border-radius: 10px;
   margin: 25px 15px;
   max-width: 1250px;
+  height: 100vh;
   padding: 10px 5px;
   position: relative;
+
   @include respond-to(handheld) {
     & {
       padding: 40px;
