--- a/src/styles/global-styled.scss
+++ b/src/styles/global-styled.scss
@@ -31,7 +31,7 @@ h2 {
   border-radius: 10px;
   margin: 25px 15px;
   max-width: 1250px;
-  height: 100vh;
+  min-height: 100vh;
   padding: 10px 5px;
   position: relative;
 
